More typing, formatting, refactoring etc.